# IHS

./: .gitignore  CMakeLists.txt  ExecutablePath.hpp  FunctionUse.hpp  IHSystem.hpp  MIT License  README  README.md
docs/: RMFranch  RMFranch.md  RMGerman  RMGerman.md  RMRussian  RMRussian.md
src/: FileSystem.hpp  Logger.hpp  States.hpp  Time.hpp  settings.hpp
src/FastEx/: LoggerEx.cpp  StatesEx.cpp
src/FastEx/Files/: Log  Log_1
src/FastExamples/: Logger.cpp
src/src/: FileSystem.cpp  Logger.cpp  States.cpp  Time.cpp
